# Multi-Party-Loan-Settlement-Ledger

./: .env.example  .lefthook.yml  README.md  docker-compose.yml
.agents/: AGENTS.md
.github/workflows/: backend-ci.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/api/: app.py  dependencies.py
backend/api/routers/: contributions.py  exit.py  fx.py  loans.py  owners.py  settlements.py
backend/core/: _db.py  balance.py  events.py  fx.py  interest.py
backend/db/: schema.sql  seed.sql
backend/db/migrations/: README.md
backend/export/: nightly.py
backend/mcp/: tools.py
backend/tests/: _fakes.py  conftest.py  test_balance.py  test_events.py  test_fx.py  test_fx_fetcher.py  test_interest.py
backend/tests/functional/: README.md  conftest.py  test_balance_pipeline.py
docs/: ERD.md  HOUSE_CONTEXT.md
docs/business-logic/: README.md  balances-and-equity.md  computed-views.md  event-log.md  exit-scenarios.md  fx-and-wire-transfers.md  interpersonal-loans.md
docs/decisions/: README.md
frontend/: README.md
