[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-backend"
version = "0.1.0"
description = "Multi-Party Loan & Settlement Ledger — backend (FastAPI + PostgreSQL)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "TBD" }
authors = [
    { name = "Multi-Party Loan & Settlement Ledger contributors" },
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "mcp*", "export*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
