[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledger-backend"
version = "0.1.0"
description = "Multi-Party Loan & Settlement Ledger — backend (FastAPI + PostgreSQL)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "TBD" }
authors = [
    { name = "Multi-Party Loan & Settlement Ledger contributors" },
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ty>=0.0.1a0",
    "lefthook>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ty>=0.0.1a0",
    "lefthook>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "mcp", "export"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=95",
]

# Coverage is scoped to the modules implemented in the current build phase.
# Session 3 added balance.py and interest.py — they are now under the 95%
# floor.
[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.ty.src]
include = ["core", "api", "mcp", "export"]
exclude = ["tests"]
